# squishy-corpus

./: .gitignore  CITATION.cff  GOVERNANCE.md  LICENSE  Makefile  README.md  RULES.md  VALUES.md  pyproject.toml
.github/workflows/: publish.yml  squishy.yml
plans/: LEGAL-REVIEW.md  PRE-FREEZE-VERIFICATION.md  REPRODUCING.md  corpus-v4.md  gemini-3-flash-review.md  license-review.md  score-weighting-critique-and-proposal.md  squishy-1.0-readiness.md  squishy-2026-readiness.md  squishy-score.md  weights-cell-swap-proposal.md
results/v4/: balanced-coverage.txt  balanced-kendall-tau.csv  pilot-coverage.txt  (+1 more)
scripts/: _capture-complete.py  acquire-binaries.py  analyze-coverage.py  audit-distribution.py  bench-v4.py  board-live.py  build-7z.sh  build-baseline.py  build-bundle-html.py  build-bundles.py  build-checksums.py  build-concat.sh  build-container.sh  build-corpus-bundle.py  build-edition-manifest.py  build-html.py  build-individual.py  build-manifest.py  build-mixed-member.py  build-provenance.py  build-review-page.py  build-site.py  build-squashfs.sh  build-tarball.sh  build-zip.sh  build-zst-skipframes.py  bundle-index.html  calculate-all.py  capture-frozen-versions.py  check-baseline.py  compress-one.sh  compute-board-live.py  coverage-map.py  coverage-summary.py  deploy-site.sh  download-candidates.py  download-natural.py  file-properties.py  fix-s3-metadata.sh  freeze.sh  (+37 more)
squishy/: __init__.py  __main__.py  calculate.py  cli.py  pipeline.py  score.py
tests/: test_axes.py  test_axes_cwk.py  test_axes_rdm.py  test_compress.py  test_edition_manifest.py  test_generators.py  test_grid.py  test_meta.py  test_metrics.py  test_prng.py  test_roster_consistency.py  test_schema.py  test_squishy_score.py
(+37 files in other folders)
