[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "squishy"
version = "2.0.0"
description = "Build pipeline for the Squishy compression test corpus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
squishy = "squishy.cli:main"
squishy-calculate = "squishy.calculate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow'"
markers = [
    "slow: marks tests that generate large files (deselect with '-m not slow')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squishy*"]
