[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "squishy"
# The single source of truth for the package version (squishy.__version__ derives
# from it). Pre-1.0 by design — the docs commit to "no citable Squishy Score until
# the v1.0 freeze + DOI", so 1.0.0 is reserved for that frozen edition.
version = "0.3.0"
description = "The 2026 compression corpus and citable Squishy Score"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
squishy = "squishy.cli:main"
squishy-calculate = "squishy.calculate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow'"
markers = [
    "slow: marks tests that generate large files (deselect with '-m not slow')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squishy*"]
